# hazard-deprecated

./: .travis.yml  README.md  default.nix  hazard.cabal  release.nix  shell.nix
deploy/: README.md  aws.nix  logical.nix  nginx-config.nix  production.yml  provisioning.yml
deploy/roles/app-server/handlers/: main.yml
deploy/roles/app-server/tasks/: main.yml
deploy/roles/app-server/templates/: haverer-api.upstart.j2  hazard.upstart.j2  nginx.conf.j2  nix.conf.j2  run-hazard.j2
deploy/roles/common/tasks/: main.yml
deploy/roles/common/templates/: auto-upgrades.j2
doc/: API-Design.md  Problem.md  example-client.sh
lib/: Hazard.hs
lib/Hazard/: GameAPI.hs  Games.hs  HttpAuth.hs  Model.hs  Routes.hs  UserAPI.hs  Users.hs  Views.hs
src/: Main.hs  ServantMain.hs
tests/: GameIntegrationTest.hs  GameTest.hs  GamesTest.hs  ModelTest.hs  UserIntegrationTest.hs  UserTest.hs  Utils.hs  test.hs
