-- Copyright (c) 2015 Jonathan M. Lange <jml@mumak.net>
--
-- Licensed under the Apache License, Version 2.0 (the "License");
-- you may not use this file except in compliance with the License.
-- You may obtain a copy of the License at
--
--     http://www.apache.org/licenses/LICENSE-2.0
--
-- Unless required by applicable law or agreed to in writing, software
-- distributed under the License is distributed on an "AS IS" BASIS,
-- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-- See the License for the specific language governing permissions and
-- limitations under the License.

name:                hazard
version:             0.1.0.0
synopsis:            An HTTP API for playing a lovely card game
description:         A RESTful HTTP API for playing a card game similar to Love Letter
license:             Apache-2.0
license-file:        LICENSE
author:              Jonathan M. Lange
maintainer:          jml@mumak.net
copyright:           Jonathan M. Lange
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git@github.com:jml/hazard.git

library
  hs-source-dirs: lib
  build-depends: base >=4.8 && <4.9
               , http-types >= 0.8.5 && < 0.9
               , aeson >= 0.9 && <0.10
               , stm >= 2.4 && <2.5
               , Spock >= 0.8 && <0.9
               , text >= 1.2 && < 1.3
               , transformers >= 0.4 && < 0.5
               , bytestring >= 0.10 && < 0.11
               , MonadRandom >= 0.4 && <0.5
               , random >= 1.1 && <1.2
               , wai >= 3.0 && <3.1
               , wai-extra >= 3.0 && <3.1
               , containers >= 0.5.6 && <0.6
               , basic-prelude >= 0.5 && < 0.6
               , errors >= 2.0 && < 2.1
               , lens >= 4.7
               , mtl >= 2.2 && <2.3
               , vector >= 0.11 && <0.12
               , tasty-quickcheck >= 0.8 && <0.9
               , path-pieces
               , blaze-html
               , blaze-markup ==0.7.*
               , haverer >= 0.3 && <0.4
               , servant ==0.4.*
               , servant-server ==0.4.*
               , servant-blaze ==0.4.*
               , either ==4.4.*
               , bytestring-conversion ==0.3.*
  exposed-modules: Hazard
                 , Hazard.HttpAuth
                 , Hazard.GameAPI
                 , Hazard.Games
                 , Hazard.Model
                 , Hazard.Routes
                 , Hazard.UserAPI
                 , Hazard.Users
                 , Hazard.Views
  default-language:    Haskell2010
  ghc-options: -Wall


executable hazard
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , Spock >= 0.8 && <0.9
                     , hazard
                     , basic-prelude >= 0.5 && < 0.6
                     , errors >= 2.0 && < 2.1
                     , stm >= 2.4 && <2.5
  hs-source-dirs:      src
  default-language:    Haskell2010


executable hazard-servant
  main-is:             ServantMain.hs
  build-depends:       base >=4.8 && <4.9
                     , basic-prelude >= 0.5 && < 0.6
                     , servant-server ==0.4.*
                     , stm >= 2.4 && <2.5
                     , warp ==3.1.*
                     , hazard
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: test.hs
  build-depends: base >= 4.8 && <4.9
               , tasty >= 0.10 && <0.11
               , tasty-hspec >= 1.1 && <1.2
               , tasty-quickcheck >= 0.8 && <0.9
               , hspec-wai >= 0.6 && <0.7
               , hspec-wai-json >= 0.6 && <0.7
               , Spock >= 0.8 && <0.9
               , aeson >= 0.9 && <0.10
               , stm >= 2.4 && <2.5
               , wai-extra >= 3.0 && <3.1
               , bytestring >= 0.10 && < 0.11
               , base64-bytestring >= 1.0 && <1.1
               , wai >= 3.0 && <3.1
               , http-types >= 0.8.5 && < 0.9
               , text >= 1.2 && < 1.3
               , MonadRandom >= 0.4 && <0.5
               , random >= 1.1 && <1.2
               , basic-prelude >= 0.5 && < 0.6
               , errors >= 2.0 && < 2.1
               , unordered-containers >= 0.2.5 && < 0.3
               , haverer >= 0.3 && <0.4
               , hazard
